<resources>
    <string name="app_name">FoodRecipes</string>
    <string name="display">WELCOME</string>
    <string name="nextTextView">CLICK TO CONTINUE</string>

    <string name="hint_email">Email (example@haha.hehe)</string>
    <string name="hint_password">Password (6 characters-upper,lower,special character,number)</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="text_login">LOG IN</string>
    <string name="text_register">SIGN UP</string>

    <string name="error_empty_email">Email Address field is empty</string>
    <string name="error_empty_password">Password field is empty</string>
    <string name="error_empty_confirmPassword">Confirm Password field is empty</string>

    <string name="error_message_email">Email Address is not valid.</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Passwords Do Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_validPassword2">Password must include 1 lowercase, 1 uppercase, 1 special character
                                        and 1 number </string>
    <string name="error_validPassword1">Password must contain at least 6 characters </string>

    <string name="login_error">Wrong Email or Password.</string>
    <string name="success_message">Registration Successful.</string>
    <string name="text_not_member">Do not have an account? SIGN UP </string>
    <string name="text_already_member">Already have an account? LOG IN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="PromptA">Optional</string>
    <string name="PromptB">Required</string>
    <string name="CusineKey">Cuisine</string>
    <string name="IEKey">Include Ingredients (comma separated)</string>
    <string name="EEKey">Exclude Ingredients (comma separated)</string>
    <string name="DietKey">Diet</string>
    <string name="QueryKey">Search Query</string>
    <string name="NumKey">Number of Recipes (14 is the maximum capacity)</string>
    <string name="SearchKey">Search</string>


</resources>