<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".Activity.DisplayActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragmentSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="group8.tcss450.uw.edu.group8project.Fragments.SurveyFragment">

        <TextView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="SURVEY"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText"
            app:layout_constraintHorizontal_bias="0.36" />

        <Button
            android:id="@+id/button"
            android:background="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/SearchKey"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <TextView
            android:id="@+id/textView2"
            android:background="#FFFFFF"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/CusineKey"
            android:paddingTop="5dp"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:background="#FFFFFF"
            android:id="@+id/editTextCuisine"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/PromptA"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:background="#FFFFFF"
            android:id="@+id/editTextDiet"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/PromptA"
            android:gravity="center"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:background="#FFFFFF"
            android:id="@+id/textView3"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/DietKey"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCuisine" />

        <TextView
            android:background="#FFFFFF"
            android:id="@+id/textView4"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/EEKey"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDiet" />

        <EditText
            android:background="#FFFFFF"
            android:id="@+id/editTextExcludeIngredients"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/PromptA"
            android:gravity="center"
            android:textStyle="bold"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:background="#FFFFFF"
            android:id="@+id/textView5"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/IEKey"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextExcludeIngredients" />

        <EditText
            android:background="#FFFFFF"
            android:id="@+id/editTextIncludeIngredients"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:textStyle="bold"
            android:hint="@string/PromptA"
            android:gravity="center"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:background="#FFFFFF"
            android:id="@+id/editTextNumber"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/PromptB"
            android:gravity="center"
            android:textStyle="bold"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="TextFields" />

        <TextView
            android:background="#FFFFFF"
            android:id="@+id/textView7"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/NumKey"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextIncludeIngredients" />



    </android.support.constraint.ConstraintLayout>
</ScrollView>

